# opencltest

./: CMakeLists.txt  build.sh  build_android.sh
src/: extractMaxProbClass.cl  main.cpp  opencltest.cpp  shader.cl
