cmake_minimum_required(VERSION 3.14)
project("opencltest")
add_definitions(-std=c++11)
set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_LIST_DIR}/")
include_directories("/usr/local/cuda-10.0/include/")
find_package(OpenCL REQUIRED)
INCLUDE_DIRECTORIES(${OpenCL_INCLUDE_DIRS})
#LINK_DIRECTORIES(${OpenCL_LIBRARY})
message(STATUS "OpenCL found: ${OPENCL_FOUND}")
message(STATUS "OpenCL includes: ${OPENCL_INCLUDE_DIRS}")
message(STATUS "OpenCL CXX includes: ${OPENCL_HAS_CPP_BINDINGS}")
message(STATUS "OpenCL libraries: ${OPENCL_LIBRARIES}")
#target_link_libraries(cpl OpenCL)
set(CMAKE_CXX_FLAG "${CMAKE_CXX_FLAGS} -g")
add_executable(opencltest "${CMAKE_CURRENT_LIST_DIR}/src/opencltest.cpp")
target_link_libraries(opencltest OpenCL)